@startuml

class DataArray {
    name : String
    label : String
    unit : String
    data : numpy.ndarray
    is_setpoint : Boolean
    set_arrays : DataArray[]
    __array_interface__: dict
    __str__(): String
}

class DataSet {
    __init__(storage_writer: DataSetIOWriter, storage_reader: DataSetIOReader)
    name: String
    timestamp: DateTime
    user_data: PythonJsonStructure
    data_arrays: dict
    default_array_name: String
    finalize()
    add_array()
    add_data(index_spec, data)
    sync_from_storage()
    save_to_storage()
}

DataSet o-- DataArray

interface DataSetIOWriter {
    sync_data_to_storage(self, index_or_slice: Union[int, List[int]], data: Dict[str, Any])
    sync_add_data_array_to_storage(self, data_array: DataArray)
    sync_metadata_to_storage(self, field_name: str, value: Any)
    finalize()
}

interface DataSetIOReader {
    bind_data_set(data_set: DataSet)
    sync_from_storage(timeout: float)
    {static} load() : DataSet
}

DataSet --> DataSetIOWriter
DataSet <--> DataSetIOReader

class MongoDataSetIOReader {
  __init__(document_id: String)
}

class MongoDataSetIOWriter {
  __init__(document_id: String)
}

class FileDataSetIOReader {
  __init__(filename: String, formatter: Formatter)
}

class FileDataSetIOWriter {
  __init__(filename: String, formatter: Formatter)
}

class HDF5DataSetIOReader {
  __init__(filename: String)
}

class HDF5DataSetIOWriter {
  __init__(filename: String)
}

class MemoryDataSetIOReader {
  __init__(storage_queue: MemoryStorageQueue)
}

class MemoryDataSetIOWriter {
  __init__(storage_queue: MemoryStorageQueue)
}

class MemoryStorageQueue {
    add_data(self, index_or_slice: Union[int, List[int]], data: Dict[str, Any])
    add_meta_data(self, *meta_data: Any)
    add_array(self, array: DataArray)
}

class MemoryDataSetIOFactory {
    {static} get_reader_writer_pair: MemoryDataSetIOReader, MemoryDataSetIOWriter
}

MemoryDataSetIOReader -down-> MemoryStorageQueue
MemoryDataSetIOWriter -down-> MemoryStorageQueue

MongoDataSetIOReader --|> DataSetIOReader
MongoDataSetIOWriter --|> DataSetIOWriter
FileDataSetIOReader --|> DataSetIOReader
FileDataSetIOWriter --|> DataSetIOWriter
HDF5DataSetIOReader --|> DataSetIOReader
HDF5DataSetIOWriter --|> DataSetIOWriter
MemoryDataSetIOReader -up-|> DataSetIOReader
MemoryDataSetIOWriter -up-|> DataSetIOWriter

MemoryDataSetIOFactory -down-> MemoryDataSetIOReader
MemoryDataSetIOFactory -down-> MemoryDataSetIOWriter

Formatter --> FileDataSetIOWriter

class PathProvider {
}

FileDataSetIOReader -up-> PathProvider
HDF5DataSetIOReader -up-> PathProvider

@enduml